Copyright Amazon.com Inc. or its affiliates. All Rights Reserved.
This file is part of the AWS CDI-SDK, licensed under the BSD 2-Clause "Simplified" License.
License details at: https://github.com/aws/aws-cdi-sdk/blob/mainline/LICENSE
-------------------------------------------------------------------------------------------

CDI (Cloud Digital Interface) SDK Version 3.0.1 - 05/30/2023

What's New
------------

* Updated install guide for Windows, replacing manual steps with an installation script.

Bug Fixes
------------
* Fixed build and run-time problems with Windows variant. For the newer version of libfabric, must use v1.15.2 until
  further notice.


CDI (Cloud Digital Interface) SDK Version 3.0.0 - 01/20/2023

What's New
------------

* NOTE: Additional third-party library source code for libfabric (ie. libfabric_new) and the latest version of the EFA
  driver MUST be downloaded and installed in order to use this version of the SDK. Refer to the install guides for
  details.
* Added use of post 1.9.x version of libfabric, which eliminates a memory copy of each adapter packet from the adapter
  packet buffer into the application buffer. Backwards compatiblity with previous versions of the CDI SDK is maintained
  by allowing the CDI SDK to access either libfabric 1.9 or the new version. This decision is made as part of the
  existing protocol negotiation process between a transmitter and receiver.

Bug Fixes
------------

---------------------------------------------------------------------------
CDI (Cloud Digital Interface) SDK Version 2.4.1 - 11/11/22
---------------------------------------------------------------------------

What's New
* Added optional bind IP address when creating connections using CdiAvmTxCreate() and CdiRawTxCreate(). See
  bind_ip_addr_str in CdiTxConfigData and CdiRxConfigData.
* Added new command line option to the test application to support specifying the bind IP address. See "-bind_ip" or
  "-bip".